rsworkspace/crates/trogon-decider-guest-macros/tests/ui/bundle_mismatched_version.stderr
error: all export_decider! commands must declare the same version
  --> tests/ui/bundle_mismatched_version.rs:19:19
   |
19 |         version = "0.2.0",
   |                   ^^^^^^^
